{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 78,
  "lineage": "7c80c15e-abe1-8553-7539-d7c48a74d948",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg_be_stg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:security-group/sg-09fcdc3e15bd28afd",
            "description": "Managed by Terraform",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "sg-be-dev"
                ]
              }
            ],
            "id": "sg-09fcdc3e15bd28afd",
            "name": "security-group-be-dev",
            "tags": {
              "Name": "sg-be-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee09e2b61d6e5c66"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg_fe_stg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:security-group/sg-0bf255034304615a3",
            "description": "Managed by Terraform",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "sg-fe-dev"
                ]
              }
            ],
            "id": "sg-0bf255034304615a3",
            "name": "security-group-fe-dev",
            "tags": {
              "Name": "sg-fe-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee09e2b61d6e5c66"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "data",
      "type": "aws_route_table",
      "name": "route_table_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:route-table/rtb-02f13ae8cece54983",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-078e8cbdfe6df415e",
                "route_table_id": "rtb-02f13ae8cece54983",
                "subnet_id": "subnet-07f24b4fc3880593f"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0c42b2c050248e67a",
                "route_table_id": "rtb-02f13ae8cece54983",
                "subnet_id": "subnet-0da4230262c4317c6"
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "rote-pub-dev"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-02f13ae8cece54983",
            "owner_id": "109749039095",
            "route_table_id": "rtb-02f13ae8cece54983",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c6e95e4b3e5f587",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "rote-pub-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee09e2b61d6e5c66"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:vpc/vpc-0ee09e2b61d6e5c66",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-036c4625cc3b7ddef",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-09344e45275c310f1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "vpc-dev"
                ]
              }
            ],
            "id": "vpc-0ee09e2b61d6e5c66",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00a0650c964ecf726",
            "owner_id": "109749039095",
            "tags": {
              "Name": "vpc-dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-table-acc-stg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c42b2c050248e67a",
            "route_table_id": "rtb-02f13ae8cece54983",
            "subnet_id": "subnet-0da4230262c4317c6"
          },
          "dependencies": [
            "module.aws_vpc.aws_subnet.subnet_pub_stg",
            "module.aws_vpc.data.aws_route_table.route_table_dev",
            "module.aws_vpc.data.aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_priv_stg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:subnet/subnet-0296b605c2319bb43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0296b605c2319bb43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "109749039095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-priv-stg"
            },
            "tags_all": {
              "Name": "subnet-priv-stg"
            },
            "vpc_id": "vpc-0ee09e2b61d6e5c66"
          },
          "dependencies": [
            "module.aws_vpc.data.aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_pub_stg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:subnet/subnet-0da4230262c4317c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-3a",
            "availability_zone_id": "apse3-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da4230262c4317c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "109749039095",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-pub-stg"
            },
            "tags_all": {
              "Name": "subnet-pub-stg"
            },
            "vpc_id": "vpc-0ee09e2b61d6e5c66"
          },
          "dependencies": [
            "module.aws_vpc.data.aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-stg[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "be-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02157887724ade8ba",
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:instance/i-08609396969433444",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08609396969433444",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0216b6f3aa6a0ad39",
            "private_dns": "ip-10-0-3-167.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0586782f3e99fa4eb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09fcdc3e15bd28afd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0296b605c2319bb43",
            "tags": {
              "Name": "be-server-stg"
            },
            "tags_all": {
              "Name": "be-server-stg"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09fcdc3e15bd28afd"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "data.aws_security_group.sg_be_stg",
            "module.aws_vpc.aws_subnet.subnet_priv_stg",
            "module.aws_vpc.data.aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-stg[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02157887724ade8ba",
            "arn": "arn:aws:ec2:ap-southeast-3:109749039095:instance/i-077c2ad3ff14d2c59",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077c2ad3ff14d2c59",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f12182f8fbfd58b1",
            "private_dns": "ip-10-0-4-232.ap-southeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.232",
            "public_ip": "108.136.223.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-008d300ace1081bbe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bf255034304615a3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da4230262c4317c6",
            "tags": {
              "Name": "web-server-stg"
            },
            "tags_all": {
              "Name": "web-server-stg"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bf255034304615a3"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "data.aws_security_group.sg_fe_stg",
            "module.aws_vpc.aws_subnet.subnet_pub_stg",
            "module.aws_vpc.data.aws_vpc.vpc_dev"
          ]
        }
      ]
    }
  ]
}